[build-system]
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.build_meta"


[project]
# FIXME: THE NAME MMIGHT BE INVALID
name = "pdmproject"
version = "0.0.1"
authors = [
    { name = "Danish Ansari" },     # TODO: ADD EMAIL: #, email = "josiah_carberry@brown.edu"},
    { name = "Jasper van Brakel" }, # TODO: ADD EMAIL: #, email = "josiah_carberry@brown.edu"},
    { name = "Tyler Olson" },       # TODO: ADD EMAIL: #, email = "josiah_carberry@brown.edu"},
    { name = "Gijs Zijderveld" },   # TODO: ADD EMAIL: #, email = "josiah_carberry@brown.edu"},
]
description = "RO47005 - Planning and Decision Making final project"
readme = "README.md"
requires-python = ">=3.10"
# keywords = ["one", "two"]
# license = {text = "BSD-3-Clause"}
classifiers = ["Programming Language :: Python :: 3"]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/Rockjack00/pdm-project"
Repository = "https://github.com/Rockjack00/pdm-project.git"
"Cognitive Robotics Department" = "https://www.tudelft.nl/me/over/afdelingen/cognitive-robotics-cor"

# [project.optional-dependencies]
# pdf = ["ReportLab>=1.2", "RXP"]
# rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]

# [project.scripts]
# my-script = "my_package.module:function"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.pytest.ini_options]
testpaths = ["unittest"]

[tool.ruff]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "scipy", "simulator", "first-party", "local-folder", "third-party"]
known-first-party = ["src", "pdmproject"]

[tool.ruff.lint.isort.sections]
# Group all scipy (numpy, matplotlib, etc) imports into a separate section.
"scipy" = ["numpy", "scipy", "matplotlib"]
# Group all simulator imports into a separate section.
"simulator" = ["pybullet", "mpscenes", "urdfenvs"]
